--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.14",
+    "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.7.0",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "font-awesome": "^4.7.0",
